fix(css): :bug: fix missing padding in title

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -1,5 +1,5 @@
 :root {
-	--header-height: 72px;
+	--header-height: 75px;
 	--menu-button-width: 75px;
 	--menu-button-height: 75px;
 }
